--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = DoubanMovie.settings
+default = DoubanComment.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = DoubanMovie
+project = DoubanComment
